conexao com banco e cadastro solicitado pelo front funcionando
